--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,6 @@
+setw -g mode-keys vi
 bind-key & kill-window
 bind-key x kill-pane
 bind | split-window -h
 bind - split-window -v
+bind -T copy-mode-vi y send-keys -X copy-pipe 'xclip -in -selection clipboard'
